# kgraph_framework

./: .gitignore  CMakeLists.txt  dataset_knn
data/siftsmall/: siftsmall_graphtruth_100nn.ivecs  siftsmall_querytruth.ivecs
include/commom/: MyDB.h  lib.h  neighbor.h  util.h
include/efanna2e/: index.h  index_graph.h  index_kdtree.h  index_pq.h  index_random.h
include/index/: index.h  index_graph.h  index_kdtree.h  index_lsh.h  index_pq.h  index_random.h
src/: index.cpp  index_graph.cpp  index_kdtree.cpp  index_lsh.cpp  index_pq.cpp  index_random.cpp
tests/: CMakeLists.txt  bruteforce.cpp  inner_product.cpp  kdtree_buildall_and_evaluate.cpp  random_buildall_and_evaluate.cpp  rplsh_buildall_and_evaluate.cpp  test_faiss_graph.cpp  test_kdtree_graph.cpp  test_nndescent.cpp  test_nndescent_refine.cpp
